# Path-Planning

./: .clang-format  .gitignore  CMakeLists.txt  README.md  field_headland_1.csv  imported_field.csv  square_field_example.csv
documentation/: CMakeLists.txt  conf.py
documentation/pages/: about.dox  development.md
include/: utils.hpp
source/: utils.cpp
source/clipper/: clipper.cpp
standalone/: CMakeLists.txt
standalone/clipper/: clipper_example.cpp
standalone/path_planning/: main.cpp
test/: CMakeLists.txt
